# Rust-ToDo-Api

./: .env  Cargo.toml  docker-compose.yml
database/: db.sql
src/: config.rs  db.rs  handlers.rs  main.rs  models.rs
