[package]
name = "rust_api"
version = "0.1.0"
authors = ["rmdadmin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
serde = { version = "1.0.117", features = ["derive"] }
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper= "0.1.8"
tokio-pg-mapper-derive= "0.1.5"
deadpool-postgres = "0.5.6"
tokio-postgres = "0.6.0"
log = "0.4.11"
env_logger = "0.8.1"
futures = "0.3.6"
futures-util = "0.3.6"
futures-macro = "0.3.6"